# teensytracer

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: toolchain-arm-none-eabi.cmake
libs/: CMakeLists.txt
raytracer_lib/: CMakeLists.txt  camera.cpp  canvas.cpp  color.cpp  light.cpp  material.cpp  matrix_helper.cpp  ray.cpp  shapes.cpp  tuple.cpp  world.cpp
raytracer_lib/include/: camera.h  canvas.h  color.h  commonmath.h  light.h  material.h  matrix_helper.h  ray.h  shapes.h  tuple.h  world.h
samples/: CMakeLists.txt  ch1.cpp  ch2.cpp  ch7.cpp
teensy/: CMakeLists.txt  arduinomacrofix.h  main.cpp
test/: CMakeLists.txt  CameraTest.cpp  CanvasTest.cpp  ColorTest.cpp  IntersectionTest.cpp  LightsTest.cpp  MarixTest.cpp  MaterialsTest.cpp  MatrixTest.cpp  PlanesTest.cpp  RaysTest.cpp  ShapesTest.cpp  SpheresTest.cpp  TransformTest.cpp  TupleTest.cpp  WorldTest.cpp
